| Bug #44685 | ndb_config --xml does not give all section variants | ||
|---|---|---|---|
| Submitted: | 6 May 2009 7:58 | Modified: | 11 Sep 2009 15:17 |
| Reporter: | Jan S Berg | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-7.0 | OS: | Any |
| Assigned to: | Magnus BlÄudd | CPU Architecture: | Any |
[6 May 2009 7:58]
Jan S Berg
[18 May 2009 10:56]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/74360
[18 May 2009 10:59]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/74363
[18 May 2009 11:00]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/74364
[18 May 2009 11:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/74367
[18 May 2009 12:15]
Bugs System
Pushed into 5.1.34-ndb-6.3.25 (revid:magnus.blaudd@sun.com-20090518121246-zp3gju1pobzcb0x8) (version source revid:magnus.blaudd@sun.com-20090518121143-cn07cpxzds53rc9e) (merge vers: 5.1.34-ndb-6.3.25) (pib:6)
[18 May 2009 13:03]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/74381
[18 May 2009 13:07]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/74382
[18 May 2009 13:09]
Bugs System
Pushed into 5.1.34-ndb-6.3.25 (revid:magnus.blaudd@sun.com-20090518130649-zh75n52dxkj3agxb) (version source revid:magnus.blaudd@sun.com-20090518130649-zh75n52dxkj3agxb) (merge vers: 5.1.34-ndb-6.3.25) (pib:6)
[18 May 2009 13:12]
Bugs System
Pushed into 5.1.34-ndb-7.0.6 (revid:magnus.blaudd@sun.com-20090518130935-dtpb708as2r6fzn6) (version source revid:magnus.blaudd@sun.com-20090518130935-dtpb708as2r6fzn6) (merge vers: 5.1.34-ndb-7.0.6) (pib:6)
[11 Sep 2009 9:46]
Jon Stephens
See also BUG#44746
[11 Sep 2009 13:46]
Jon Stephens
Documented bugfix in the NDB-6.3.25 and 7.0.6 changelogs as follows:
The output of ndb_config --xml did not provide information about
all sections of the configuration file.
Closed.
