BUG#44685 ndb_config --xml does not give all section variants  - part 1  - add primarykeys tag